# ElGA

./: Dockerfile  LICENSE.md  README.md
implementation/: CMakeLists.txt
implementation/src/: CMakeLists.txt  address.cpp  address.hpp  agent.cpp  agent.hpp  agentbsp.cpp  agentfull.cpp  agentlbsp.cpp  algorithm.hpp  bfsalgorithm.cpp  bfsalgorithm.hpp  chatterbox.cpp  chatterbox.hpp  client.cpp  client.hpp  consistenthasher.cpp  consistenthasher.hpp  countminsketch.cpp  countminsketch.hpp  countsketch.cpp  countsketch.hpp  countsketchbase.hpp  directory.cpp  directory.hpp  directory_master.cpp  directory_master.hpp  integer_hash.cpp  integer_hash.hpp  kcorealgorithm.cpp  kcorealgorithm.hpp  lpaalgorithm.cpp  lpaalgorithm.hpp  main.cpp  pack.hpp  participant.cpp  participant.hpp  pralgorithm.cpp  pralgorithm.hpp  replicationmap.hpp  streamer.cpp  (+7 more)
implementation/test/: CMakeLists.txt  _test_compressed_vagents.cpp  osx_setup_test_networking.sh  test_address.cpp  test_chatterbox.cpp  test_consistenthasher.cpp  test_countminsketch.cpp  test_countsketch.cpp  test_countsketchmerge.cpp  test_decision.cpp  test_integer_hash.cpp  test_pack.cpp  test_replicationmap.cpp  test_streamer.cpp  tests.hpp
implementation/test/decision_test/: test_countsketch.py
implementation/test/streams/: correct_format  invalid_characters  invalid_number_of_arguments
implementation/test/zipf/: data_1k_1  data_1k_2
scripts/: README.md  cleanup.sh  elga.sh  exp_stream.sh  get-dist.sh  get-outs.sh  grab.sh  install.sh  new-agents.sh  run-workload.sh  run_exp.sh  start-elga.sh  start-streamers.sh  stop-streamers.sh  stop_streamer_int.sh  stream-file.sh  upload-dumps-raw.sh  upload-dumps.sh  vars.sh  watch-agent-logs.sh
